--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Sun Apr 10 14:30:42 EDT 2022
+#Sun Apr 10 15:59:53 EDT 2022
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.scm.guru.springframework\:pet-clinic-data.empty=true
+project.scm.guru.springframework\:sfg-pet-clinic.tag=sfg-pet-clinic-0.0.5
+completedPhase=run-preparation-goals
 scm.url=scm\:git\:git@github.com\:springframeworkguru/sfg-pet-clinic.git
+project.rel.guru.springframework\:pet-clinic-web=0.0.5
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.dev.guru.springframework\:sfg-pet-clinic=0.0.6-SNAPSHOT
+project.scm.guru.springframework\:sfg-pet-clinic.developerConnection=scm\:git\:git@github.com\:springframeworkguru/sfg-pet-clinic.git
+project.scm.guru.springframework\:pet-clinic-web.empty=true
+scm.tag=sfg-pet-clinic-0.0.5
+project.rel.guru.springframework\:pet-clinic-data=0.0.5
+project.rel.guru.springframework\:sfg-pet-clinic=0.0.5
+project.dev.guru.springframework\:pet-clinic-web=0.0.6-SNAPSHOT
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+project.dev.guru.springframework\:pet-clinic-data=0.0.6-SNAPSHOT
