Added wro4j plugin and config from Spring Pet Clinic. Closes #24.

--- a/pet-clinic-web/src/main/wro/wro.properties
+++ b/pet-clinic-web/src/main/wro/wro.properties
@@ -1,5 +1,6 @@
 #List of preProcessors
-preProcessors=lessCssImport
+#preProcessors=lessCssImport
 #List of postProcessors
-postProcessors=less4j
-
+#postProcessors=less4j
+preProcessors=cssImport,jsMin,cssMin,lessCssImport
+postProcessors=lessCss,coffeeScript,less4j
